<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".Activities.PhoneNumberActivity">


    <ImageView
        android:id="@+id/iv_verifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/otp_verify" />

    <TextView
        android:id="@+id/tv_verifyOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/tv_verify"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_verifyOtp"
        app:layout_constraintStart_toStartOf="@+id/iv_verifyOtp"
        app:layout_constraintTop_toBottomOf="@+id/iv_verifyOtp" />

    <TextView
        android:id="@+id/tv_enterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/tv_enterOTP"
        app:layout_constraintEnd_toEndOf="@+id/tv_verifyOtp"
        app:layout_constraintStart_toStartOf="@+id/tv_verifyOtp"
        app:layout_constraintTop_toBottomOf="@+id/tv_verifyOtp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterOtp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="number"
                android:layout_gravity="center"
                android:itemBackground="@color/grey"
                android:focusableInTouchMode="true"
                app:OtpItemCount="6"
                app:OtpLineColor="@color/teal_200"
                app:OtpViewType="line" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verifyOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/btn_continue"
                android:textStyle="bold"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>